# asm

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: asmAtomic.h  asmCmp.h  asmFactorial.h  asmInline.h  asmPow.h  asmPrintStr.h  asmStrlen.h  asmSwap.h
src/: asmAtomic.c  asmCmp.c  asmFactorial.c  asmIfInt.c  asmIntCmp.c  asmMain.c  asmPow.c  asmSwap.c
